[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
strict = true

[tool.poetry]
name = "dat-file-filter"
version = "0.1.0"
description = ""
authors = ["Jacob McIntosh <nacitar.sevaht@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.15.0"
flake8 = "^6.1.0"
black = {extras = ["jupyter"], version = "^23.12.1"}
isort = "^5.13.2"

[tool.poetry.scripts]
checks = "checks:main"
dat-file-filter = "dat_file_filter.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
